--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tinkoff/invest-js",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Tinkoff Invest OpenAPI Client",
   "types": "./build/index.d.ts",
   "engines": {
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Tinkoff/invest-js"
+    "url": "https://github.com/RussianInvestments/invest-api-js-client"
   },
   "keywords": [
     "trading",
