--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "sh ./tools/build.sh",
     "gen": "sh ./tools/gen.sh",
     "watch": "tsc --watch"
+    "prepublishOnly": "git push --follow-tags && gh-release -y",
+    "version": "auto-changelog -p --template keepachangelog auto-changelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "ts-node": "^8.8.1"
+    "auto-changelog": "^1.16.2",
+    "gh-release": "^3.5.0"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.5.0",
