--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "sh ./tools/build.sh",
     "gen": "sh ./tools/gen.sh",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
     "prepublishOnly": "git push --follow-tags && gh-release -y",
     "version": "auto-changelog -p --template keepachangelog auto-changelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md"
   },
@@ -31,7 +31,7 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
-    "ts-node": "^8.8.1"
+    "ts-node": "^8.8.1",
     "auto-changelog": "^1.16.2",
     "gh-release": "^3.5.0"
   },
