--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -19,6 +19,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run gen
+      - run: git add src/generated/ && git commit -m "contracts gen ${{ github.event.inputs.newversion }}" .
       - run: npm run build
       - name: Version and publish to npm
         id: npm-bump
