--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tinkoff/invest-js",
-  "version": "1.24.0",
-  "description": "Tinkoff Invest OpenAPI Client",
+  "version": "1.25.0",
+  "description": "T-Invest OpenAPI Client",
   "types": "./build/index.d.ts",
   "engines": {
     "node": ">=10.0.0"
@@ -16,7 +16,7 @@
     "build": "sh ./tools/build.sh",
     "gen": "sh ./tools/gen.sh",
     "watch": "tsc --watch",
-    "prepublishOnly": "git push --follow-tags && gh-release -y",
+    "prepublishOnly": "echo 'git push --follow-tags && gh-release -y'",
     "version": "auto-changelog -p --template keepachangelog auto-changelog --breaking-pattern 'BREAKING CHANGE:' && git add CHANGELOG.md"
   },
   "repository": {
